--- a/Week 1- Day 1.html
+++ b/Week 1- Day 1.html
@@ -4,6 +4,7 @@
             <title>Latihan Part 2</title>
         </head>
         <body>
-            <H1>Mini Bootcamp REVO-U</H1>
+            <H1>Mini Bootcamp REVO-U Part 1 Banget</H1>
+              <p>Jujur sebagai penghuni FEB tiba-tiba join begini agak waww, impressive</p>
         </body>
     </html>
