--- a/Week 1- Day 1.html
+++ b/Week 1- Day 1.html
@@ -6,5 +6,7 @@
         <body>
             <H1>Mini Bootcamp REVO-U Part 1 Banget</H1>
               <p>Jujur sebagai penghuni FEB tiba-tiba join begini agak waww, impressive</p>
+              <br>
+              <p>Alhamdulillah akhirnya kebaca, walaupun ga tau set upnya bener apa salah</p>
         </body>
     </html>
